--- a/doc/pyre/sections/epilogue.tex
+++ b/doc/pyre/sections/epilogue.tex
@@ -5,6 +5,35 @@
 % (c) 2003-2017 all rights reserved
 %
 
+\sectioninlbffalse
+\section{to do}
+
+\TODO{
+  \item configuration
+    \begin{itemize}
+    \item the full assignment uri
+    \item assignments involving expressions and references
+    \item wiring shortcuts for properly designed package namespaces
+    \item having multiple configurations for the same property in the same file
+    \item wiring a facility to a specific, perhaps pre\"existing component
+    \item syntax rules for each format
+    \end{itemize}
+  \item plexus
+    \begin{itemize}
+    \item convert simple app into a plexus action
+    \end{itemize}
+  \item persistence
+    \begin{itemize}
+    \item filesystem vs.~databases
+    \item filesystem abstractions: paths, uris, containers
+    \item local, virtual, zip, hdf5, remote
+    \item the standard filesystem layout
+    \item application private filesystems
+    \item databases
+    \end{itemize}
+  }
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../pyre"
