doc/pyre: repaired the top line in {components} that got mangled somehow; adjusted the cover slide date to match the actual schedule

--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -1,6 +1,4 @@
-
-\frameinlbffalse
- -*- LaTeX -*-
+% -*- LaTeX -*-
 % -*- coding: utf-8 -*-
 %
 % michael a.g. aïvázis <michael.aivazis@para-sim.com>
