doc/pyre: the to-do list is now lecture set specific

--- a/doc/pyre/overview.tex
+++ b/doc/pyre/overview.tex
@@ -32,7 +32,7 @@
 \input{applications}
 \input{persistence}
 \input{references}
-\input{epilogue}
+\input{todo-overview}
 
 % references
 \end{document}
