doc/pyre: factored out the document meta-data

--- a/doc/pyre/extensions.tex
+++ b/doc/pyre/extensions.tex
@@ -14,23 +14,18 @@
 
 % packages, setup, macros, etc.
 \input{config/setup}
+% document meta-data
+\input{config/meta}
 
-% the document
-\title[pyre 1.0 -- april 2017]{pyre 1.0}
-\author[\url{michael.aivazis@para-sim.com}]{Michael A.~G.~A\"iv\'azis}
-\institute{\url{michael.aivazis@para-sim.com} \\ \small parasim }
-\date{April 2017}
-
+% here we go
 \begin{document}
-
 % the sections
 \input{splash}
 \input{syllabus}
 \input{contents}
 \input{references}
 \input{todo-extensions}
-
-% references
+% all done
 \end{document}
 
 % end of file
