--- a/doc/pyre/overview.tex
+++ b/doc/pyre/overview.tex
@@ -14,15 +14,11 @@
 
 % packages, setup, macros, etc.
 \input{config/setup}
+% document meta-data
+\input{config/meta}
 
-% the document
-\title[pyre 1.0 -- february 2017]{pyre 1.0}
-\author[\url{michael.aivazis@para-sim.com}]{Michael A.~G.~A\"iv\'azis}
-\institute{\url{michael.aivazis@para-sim.com} \\ \small parasim }
-\date{March 2017}
-
+% here we go
 \begin{document}
-
 % the sections
 \input{splash}
 \input{syllabus}
@@ -33,8 +29,7 @@
 \input{persistence}
 \input{references}
 \input{todo-overview}
-
-% references
+% all done
 \end{document}
 
 % end of file
