doc/pyre: bootstrapped the lecture on {extensions}

--- a/doc/pyre/extensions.tex
+++ b/doc/pyre/extensions.tex
@@ -20,11 +20,12 @@
 % here we go
 \begin{document}
 % the sections
-\input{splash}
-\input{syllabus}
-\input{contents}
-\input{references}
-\input{todo-extensions}
+\input{sections/splash}
+\input{sections/syllabus}
+\input{sections/contents}
+\input{sections/extensions}
+\input{sections/references}
+\input{sections/todo-extensions}
 % all done
 \end{document}
 
