--- a/doc/pyre/sections/persistence.tex
+++ b/doc/pyre/sections/persistence.tex
@@ -88,11 +88,9 @@
     \item the root level containers determine the access mechanisms
     \item currently supported are local filesystems and zip files; hdf5 support is in development
     \item there is also the notion of a virtual filesystem
+    \item exploration and traversal is supported using the visitors\supercite{patterns}
+      \pyrebuiltin{finder}, \pyrebuiltin{simpleExplorer}, \pyrebuiltin{treeExplorer}
     \end{itemize}
-%
-  \item filesystem exploration and traversal is supported using the
-    visitors\supercite{patterns} \pyrebuiltin{pyre.filesystem.finder},
-    \pyrebuiltin{pyre.filesystem.simpleExplorer}, \pyrebuiltin{pyre.filesystem.treeExplorer}
 %
   \end{itemize}
 %
